@@ -18,7 +18,7 @@
  * Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
  * 02110-1301, USA.
  *
- * $Id: module_utils.h,v 1.15 2007-06-21 20:22:56 hanke Exp $
+ * $Id: module_utils.h,v 1.16 2007-06-25 12:13:29 pdm Exp $
  */
 
 #include <semaphore.h>
@@ -60,7 +60,7 @@ int module_num_dc_options;
  msg_settings_old.punctuation_mode = -1;\
  msg_settings_old.spelling_mode = -1;\
  msg_settings_old.cap_let_recogn = -1;\
- msg_settings_old.language = strdup("en");	\
+ msg_settings_old.language = NULL;	\
  msg_settings_old.voice = NO_VOICE;
 
 #define INIT_SETTINGS_TABLES()\
@@ -71,7 +71,7 @@ int module_num_dc_options;
  msg_settings.punctuation_mode = PUNCT_NONE;\
  msg_settings.spelling_mode = SPELLING_OFF;\
  msg_settings.cap_let_recogn = RECOGN_NONE;\
- msg_settings.language = strdup("en");\
+ msg_settings.language = NULL;\
  msg_settings.voice = MALE1;\
  CLEAN_OLD_SETTINGS_TABLE()
 
